
1.2.11 released

	* fix issue with moving the session object
	* deprecate torrent_status::allocating. This state is no longer used
	* fix bug creating torrents with symbolic links
	* remove special case to save metadata in resume data unconditionally when added throught magnet link
	* fix bugs in mutable-torrent support (reusing identical files from different torrents)
	* fix incorrectly inlined move-assignment of file_storage
	* add session::paused flag, and the ability to construct a session in paused mode
	* fix session-pause causing tracker announces to fail
	* fix peer-exchange flags bug
	* allow saving resume data before metadata has been downloaded (for magnet links)
	* record blocks in the disk queue as downloaded in the resume data
	* fix bug in set_piece_deadline() when set in a zero-priority piece
	* fix issue in URL parser, causing issues with certain tracker URLs
	* use a different error code than host-unreachable, when skipping tracker announces

1.2.10 released

	* fix regression in python binding for move_storage()
	* improve stat_file() performance on Windows
	* fix issue with loading invalid torrents with only 0-sized files
	* fix to avoid large stack allocations

1.2.9 released

	* add macro TORRENT_CXX11_ABI for clients building with C++14 against
	  libtorrent build with C++11
	* refreshed m4 scripts for autotools
	* removed deprecated wstring overloads on non-windows systems
	* drop dependency on Unicode's ConvertUTF code (which had a license
	  incompatible with Debian)
	* fix bugs exposed on big-endian systems
	* fix detection of hard-links not being supported by filesystem
	* fixed resume data regression for seeds with prio 0 files

1.2.8 released

	* validate UTF-8 encoding of client version strings from peers
	* don't time out tracker announces as eagerly while resolving hostnames
	* fix NAT-PMP shutdown issue
	* improve hostname lookup by merging identical lookups
	* fix network route enumeration for large routing tables